--- a/public/css/styleAdmin.css
+++ b/public/css/styleAdmin.css
@@ -7,28 +7,45 @@ body {
     height: 100vh;
 }
 
+a,
+a:hover,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s
+}
 
-/* ======= SIDEBAR ======= */
+#sidebar.active {
+    margin-left: -250px;
+}
+
+.wrapper {
+    display: flex;
+    text-decoration: none;
+    transition: all 0.3s;
+}
 
 #sidebar {
-    margin: 1.5rem 1rem;
     min-width: 250px;
     max-width: 250px;
-    height: 92%;
-    color: #fff;
     background-color: rgba(255, 107, 107, .8);
+    color: #fff;
     transition: all 0.3s;
 }
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background-color: rgba(255, 107, 107, 1);
-    color: white;
+    background-color: #6d7fcc;
 }
 
 #sidebar ul.components {
     padding: 20px 0;
     border-bottom: 1px solid #47748b;
+}
+
+#sidebar ul p {
+    color: #fff;
+    padding: 10px;
 }
 
 #sidebar ul li a {
@@ -48,7 +65,7 @@ a[aria-expanded="true"] {
     background: #6d7fcc;
 }
 
-a[data-toggle="collapse"] {
+a[data-toggle="collpase"] {
     position: relative;
 }
 
@@ -56,14 +73,40 @@ a[data-toggle="collapse"] {
     display: block;
     position: absolute;
     top: 50%;
-    right: 20px;
+    right: 20%;
     transform: translateY(-50%);
+}
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #6d7fcc;
+}
+
+#content {
+    width: 100%;
+    padding: 20px;
+    min-height: 100vh;
+    transition: all 0.3s;
+}
+
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -250px;
+    }
+    #sidebar.active {
+        margin-left: 0;
+    }
+    #sidebarCollapse span {
+        display: none;
+    }
 }
 
 
 /* ======= INFO DASHBOARD ======= */
 
-#infoDashboard {
+
+/* #infoDashboard {
     width: 50%;
     display: flex;
     justify-content: space-around;
@@ -74,13 +117,14 @@ a[data-toggle="collapse"] {
     padding: 1rem;
     border: 1px solid black;
     border-radius: 5%;
-}
+} */
 
 
 /* ======= PHRASES ======= */
 
-#phrasesTable {
+
+/* #phrasesTable {
     position: absolute;
     top: 80px;
     left: 300px;
-}
+} */
