fixed profile img

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -120,17 +120,18 @@
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
-                                <img class="img-profile rounded-circle" src="img/undraw_profile.svg">
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Charles Leclerc</span>
+                                <div class="topbar-divider d-none d-sm-block"></div>
+                                <img style="width:75px;" class="rounded-circle" src="https://www.monaco-tribune.com/wp-content/uploads/2020/10/charles-leclerc.jpeg ">
                             </a>
                             <!-- Dropdown - User Information -->
-                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> Profile
+                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in " aria-labelledby="userDropdown ">
+                                <a class="dropdown-item " href="# ">
+                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400 "></i> Profile
                                 </a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Logout
+                                <div class="dropdown-divider "></div>
+                                <a class="dropdown-item " href="# " data-toggle="modal " data-target="#logoutModal ">
+                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400 "></i> Logout
                                 </a>
                             </div>
                         </li>
@@ -142,32 +143,32 @@
 
 
                 <!-- Begin page content -->
-                <div class="container-fluid">
+                <div class="container-fluid ">
                     <!-- page heading -->
-                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-                        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
-                            <i class="fas fa-download fa-sm text-white-50"></i> Maybe download post
+                    <div class="d-sm-flex align-items-center justify-content-between mb-4 ">
+                        <h1 class="h3 mb-0 text-gray-800 ">Dashboard</h1>
+                        <a href="# " class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm ">
+                            <i class="fas fa-download fa-sm text-white-50 "></i> Maybe download post
                         </a>
                     </div>
 
 
                     <!-- Content row -->
-                    <div class="row">
+                    <div class="row ">
 
                         <!-- Numero post (card) -->
-                        <div class="col-xl-6 col-md-12 mb-4">
-                            <div class="card border-left-primary shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-s font-weight-bold text-primary text-uppercase mb-2">
+                        <div class="col-xl-6 col-md-12 mb-4 ">
+                            <div class="card border-left-primary shadow h-100 py-2 ">
+                                <div class="card-body ">
+                                    <div class="row no-gutters align-items-center ">
+                                        <div class="col mr-2 ">
+                                            <div class="text-s font-weight-bold text-primary text-uppercase mb-2 ">
                                                 Numero di post
                                             </div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">35</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800 ">35</div>
                                         </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                                        <div class="col-auto ">
+                                            <i class="fas fa-calendar fa-2x text-gray-300 "></i>
                                         </div>
                                     </div>
                                 </div>
@@ -175,18 +176,18 @@
                         </div>
 
                         <!-- numero utenti -->
-                        <div class="col-xl-6 col-md-12 mb-4">
-                            <div class="card border-left-success shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-s font-weight-bold text-success text-uppercase mb-2">
+                        <div class="col-xl-6 col-md-12 mb-4 ">
+                            <div class="card border-left-success shadow h-100 py-2 ">
+                                <div class="card-body ">
+                                    <div class="row no-gutters align-items-center ">
+                                        <div class="col mr-2 ">
+                                            <div class="text-s font-weight-bold text-success text-uppercase mb-2 ">
                                                 Numero di utenti
                                             </div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">10</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800 ">10</div>
                                         </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-user fa-2x text-gray-300"></i>
+                                        <div class="col-auto ">
+                                            <i class="fas fa-user fa-2x text-gray-300 "></i>
                                         </div>
                                     </div>
                                 </div>
@@ -196,9 +197,7 @@
                     </div>
 
 
-
-
-                    <div class="row">
+                    <div class="row ">
 
                         <div class="col-xl-8 col-md-12 mb-4">
                             <div class="card border-left-dark shadow h-100 py-2">
@@ -229,7 +228,6 @@
                             </div>
                         </div>
 
-
                         <!-- numero di utenti attivi nelle ultime 24h (contando anche quelli senza account?) o num chat aperte-->
                         <div class="col-xl-4 col-md-12 mb-4">
                             <div class="card border-left-info shadow h-100 py-2">
@@ -253,29 +251,25 @@
                                     </div>
                                 </div>
                             </div>
-
-
                         </div>
 
-
-
-
                     </div>
+
 
 
                 </div>
             </div>
 
             <!-- Bootstrap core JavaScript-->
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js" integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg==" crossorigin="anonymous"></script>
-            <script src="/js/admin/dashboard.js"></script>
-            <script src="/startbootstrap-sb-admin-2-gh-pages/vendor/jquery/jquery.min.js"></script>
-            <script src="/startbootstrap-sb-admin-2-gh-pages/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js " integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg==" crossorigin=" anonymous "></script>
+            <script src="/js/admin/dashboard.js "></script>
+            <script src="/startbootstrap-sb-admin-2-gh-pages/vendor/jquery/jquery.min.js "></script>
+            <script src="/startbootstrap-sb-admin-2-gh-pages/vendor/bootstrap/js/bootstrap.bundle.min.js "></script>
 
             <!-- Core plugin JavaScript-->
-            <script src="/startbootstrap-sb-admin-2-gh-pages/vendor/jquery-easing/jquery.easing.min.js"></script>
+            <script src="/startbootstrap-sb-admin-2-gh-pages/vendor/jquery-easing/jquery.easing.min.js "></script>
 
             <!-- Custom scripts for all pages-->
-            <script src="/startbootstrap-sb-admin-2-gh-pages/js/sb-admin-2.min.js"></script>
+            <script src="/startbootstrap-sb-admin-2-gh-pages/js/sb-admin-2.min.js "></script>
 
             <%- include('./partials/footer') %>
