--- a/views/admin/partials/footer.ejs
+++ b/views/admin/partials/footer.ejs
@@ -1,3 +1,17 @@
+<!-- Ending Page Wrapper -->
+</div>
+
+<!-- Bootstrap core JavaScript-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js " integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg==" crossorigin=" anonymous "></script>
+<script src="/js/admin/dashboard.js "></script>
+<script src="/startbootstrap-sb-admin-2-gh-pages/vendor/jquery/jquery.min.js "></script>
+<script src="/startbootstrap-sb-admin-2-gh-pages/vendor/bootstrap/js/bootstrap.bundle.min.js "></script>
+
+<!-- Core plugin JavaScript-->
+<script src="/startbootstrap-sb-admin-2-gh-pages/vendor/jquery-easing/jquery.easing.min.js "></script>
+
+<!-- Custom scripts for all pages-->
+<script src="/startbootstrap-sb-admin-2-gh-pages/js/sb-admin-2.min.js "></script>
 </body>
 
 </html>
