--- a/views/admin/partials/footer.ejs
+++ b/views/admin/partials/footer.ejs
@@ -1,3 +1,19 @@
+<!-- end of Main Content (.wrapper) -->
+</div>
+
+<!-- Footer -->
+<footer class="sticky-footer bg-white" style="height: 30px;">
+    <div class="container my-auto">
+        <div class="copyright text-center my-auto">
+            <span>Copyright &copy; <a href="https://github.com/matteo-naccarato/im-with-you">I'm with you</a> 2021</span>
+        </div>
+    </div>
+</footer>
+<!-- End of Footer -->
+
+<!-- Content Wrapper (.content-wrapper) -->
+</div>
+
 <!-- Ending Page Wrapper -->
 </div>
 
