--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -51,7 +51,7 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Interface
+                Post
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
