--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/header') %>
     <!-- Begin page content -->
-    <div class="container-fluid ">
+    <div class="container-fluid">
         <!-- page heading -->
         <div class="d-flex align-items-center justify-content-between mb-4 ">
             <h1 class="h3 mb-0 mr-4 text-gray-800 ">Dashboard</h1>
@@ -115,10 +115,7 @@
 
         </div>
 
-
-
-    </div>
-    </div>
+        <!-- end of container-fluid -->
     </div>
 
 
