--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -118,5 +118,9 @@
         <!-- end of container-fluid -->
     </div>
 
+    <!-- script only for this page -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js " integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg==" crossorigin=" anonymous "></script>
+    <script src="/js/admin/dashboard.js "></script>
+
 
     <%- include('./partials/footer') %>
