--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -90,13 +90,13 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
-                    <span>Articoli</span>
+                    <span>Post</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Azioni</h6>
-                        <a class="collapse-item" href="/admin/articles">Storico</a>
-                        <a class="collapse-item text-info" href="/admin/articles/create">Crea</a>
+                        <a class="collapse-item" href="/admin/posts">Storico</a>
+                        <a class="collapse-item text-info" href="/admin/posts/create">Crea</a>
                     </div>
                 </div>
             </li>
