--- a/views/admin/posts/all.ejs
+++ b/views/admin/posts/all.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/header') %>
+<%- include('./../partials/header') %>
 
     <div class="container-fluid">
 
@@ -8,7 +8,7 @@
             <div class="col-12 mb-4">
                 <div class="card border-right-primary shadow h-100 py-2">
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                        <h6 class="m-0 font-weight-bold">Tabella FRASI</h6>
+                        <h6 class="m-0 font-weight-bold">Tabella POSTS</h6>
 
                         <div class="dropdown no-arrow">
                             <!-- IE => Import/Export -->
@@ -45,19 +45,31 @@
                             <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
                                 <thead>
                                     <tr>
-                                        <th>Nome autore</th>
-                                        <th>Data</th>
+                                        <th>Titolo</th>
+                                        <th>Testo (max. 128 caratteri)</th>
+                                        <th>img url</th>
+                                        <th>Stato</th>
                                         <th>...</th>
                                         <th>Likes</th>
+                                        <th>Autore</th>
                                         <th>Azioni</th>
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    <!-- LIMITE MASSIMO DI RIGHE VISUALIZZABILI -->
                                     <tr>
-                                        <td>Matteo (+link pagina autore)</td>
-                                        <td>08/05/2021 23:21</td>
+                                        <td>Dorian</td>
+                                        <td>Dorian era ...</td>
+                                        <td>img</td>
+                                        <td>stato</td>
                                         <td>...</td>
                                         <td>89 :likes</td>
+                                        <td>
+                                            <!-- per visualizzare profilo dell'utente -->
+                                            <a href="/users/1">
+                                                Matteo Naccarato
+                                            </a>
+                                        </td>
                                         <td>matita + cestino</td>
                                     </tr>
                                 </tbody>
@@ -69,6 +81,8 @@
             </div>
         </div>
 
+
+
     </div>
 
 
@@ -78,4 +92,4 @@
     <!-- <script src="cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script> -->
     <!-- <script src="/js/admin/tables.js"></script> -->
 
-    <%- include('./partials/footer') %>
+    <%- include('./../partials/footer') %>
